SERVER-20727 Seed shell random numbers from SecureRandom